Tests/Negative/NilToValueType.mr
fun main(): i32 {
    var x: i32 = nil; // Error: nil can only be assigned to pointers
    return 0;
}
